--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
       - main
   schedule:
       # Here you can change how often your backup runs. See https://crontab.guru/examples.html
-      - cron: "0 4 * * *"
+      # UTC 20:00 => Beijing 04:00
+      - cron: "0 20 * * *"
 
 jobs:
   backup:
